app/theia/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: theia
  namespace: #@ data.values.theia.namespace
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.theia.matchLabels
  template:
    metadata:
      labels: #@ data.values.theia.matchLabels
    spec:
      containers:
        - name: theia
          image: theiaide/theia:latest
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 3000
          volumeMounts:
          - name: tz-config
            mountPath: /etc/localtime
      volumes:
      - name: tz-config
        hostPath:
          path: #@ "/usr/share/zoneinfo/" + data.values.timezone
