app/theia/service.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  name: theia
  namespace: #@ data.values.theia.namespace
spec:
  selector: #@ data.values.theia.matchLabels
  ports:
  - name: web
    port: 80
    targetPort: 3000
