app/theia/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: theia
  namespace: #@ data.values.theia.namespace
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}`)".format(data.values.theia.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: theia
      port: 80
      strategy: RoundRobin
